force-app/main/default/objects/LLC_BI__Opportunity_Product__c/LLC_BI__Opportunity_Product__c.object-meta.xml
<CustomObject>
    <label>Opportunity_Product</label>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Opportunity_Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity_Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>