force-app/main/default/objects/LLC_BI__Opportunity_Product__c/fields/LLC_BI__Is_Product_For_Pricing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Product_For_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to differentiate between products added to an object for pricing or if it should display at the object level or strictly on the proforma for pricing</description>
    <label>Is_Product_For_Pricing</label>
    <type>Checkbox</type>
</CustomField>