force-app/main/default/objects/LLC_BI__Opportunity_Product__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <label>Product</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Opportunity_Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>