force-app/main/default/objects/LLC_BI__Opportunity_Product__c/fields/LLC_BI__Product_Line__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Line__c</fullName>
    <formula>LLC_BI__Product__r.LLC_BI__Product_Type__r.LLC_BI__Product_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>