force-app/main/default/objects/LLC_BI__Opportunity_Product__c/fields/LLC_BI__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Type__c</fullName>
    <formula>LLC_BI__Product__r.LLC_BI__Product_Type__r.Name</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>